# llm-council-plus

./: .dockerignore  .env.example  .firebaserc  .gitignore  Dockerfile  migrate_to_firestore.py  pyproject.toml
backend/: auth.py  campaigns.py  council.py  debate.py  firebase_config.py  main.py  ollama_client.py  prompts.py  settings.py  storage.py  uploads.py
backend/providers/: anthropic.py  google.py
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  firebase.js  index.css
frontend/src/components/: CampaignBar.css  CampaignBar.jsx  CampaignStageView.css  CampaignStageView.jsx  ChatInterface.css  ChatInterface.jsx  DebateView.css  DebateView.jsx  Login.css  Login.jsx  Settings.css  Settings.jsx  Sidebar.css  Sidebar.jsx  Stage2.css  Stage2.jsx  Stage3.css  StageExpertConfig.css  StageExpertConfig.jsx  StageManager.css  StageManager.jsx  ThinkBlockRenderer.jsx
frontend/src/components/settings/: DebateConfig.jsx
